--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,11 +2,11 @@
 roles_path = roles/
 host_key_checking = False
 inventory = ./inventory/hq1
-inventory_plugins = ./roles/ansible-virl/inventory_plugins
+# inventory_plugins = ./roles/ansible-virl/inventory_plugins
 interpreter_python = auto_silent
 hash_behaviour = merge
-library = ../python-viptela/ansible/modules/viptela
-module_utils = ../python-viptela/ansible/module_utils
+# library = ../python-viptela/ansible/modules/viptela
+# module_utils = ../python-viptela/ansible/module_utils
 
 [inventory]
 # enable_plugins = host_list, script, auto, yaml
