--- a/Dockerfile.awx
+++ b/Dockerfile.awx
@@ -11,3 +11,5 @@ COPY requirements.txt /tmp/requirements.txt
 
 RUN /var/lib/awx/venv/sdwan-devops/bin/pip install --no-cache --upgrade pip setuptools wheel
 RUN /var/lib/awx/venv/sdwan-devops/bin/pip install -r /tmp/requirements.txt
+
+RUN curl -o /usr/share/ansible/plugins/inventory/virl2.py https://raw.githubusercontent.com/CiscoDevNet/ansible-virl/0.0.8.dev2/ansible/plugins/inventory/virl2.py
