Re-factored connectivity check to child playbook

--- a/build-cml.yml
+++ b/build-cml.yml
@@ -10,31 +10,7 @@
 
 - import_playbook: refresh-cml.yml
 
-- name: Check initial topology connectivity
-  hosts: internet:&virl_hosts
-  connection: local
-  any_errors_fatal: true
-  gather_facts: no
-  tasks:
-    - name: Ping outside interface of Internet routers
-      ios_ping:
-        dest: "{{ hostvars[item].interfaces.GigabitEthernet2.ip.primary | ipaddr('address') }}"
-      loop: "{{ groups.internet_routers | intersect(groups.virl_hosts) }}"
-      register: result
-      retries: 60
-      delay: 10
-      until: result is not failed
-      connection: network_cli
-
-    - name: Ping inside interface of Internet routers
-      ios_ping:
-        dest: "{{ hostvars[item].interfaces.GigabitEthernet3.ip.primary | ipaddr('address') }}"
-      loop: "{{ groups.internet_routers | intersect(groups.virl_hosts) }}"
-      register: result
-      retries: 60
-      delay: 10
-      until: result is not failed
-      connection: network_cli
+- import_playbook: check-connectivity.yml passed=internet:&virl_hosts
 
 - import_playbook: start-cml-nodes.yml passed=system:&virl_hosts
 
