--- a/config-vmanage.yml
+++ b/config-vmanage.yml
@@ -5,12 +5,51 @@
     vmanage_mgmt_interface: "{{ hostvars[vmanage_host].mgmt_interface | default('ansible_host') }}"
     vmanage_ip: "{{ hostvars[vmanage_host][vmanage_mgmt_interface] | ipaddr('address') }}"
     vbond_controller: "{{ groups.vbond_hosts[0] }}"
-  tags:
-    - control
-    - vmanage
+    aws_access_key_id: "{{ lookup('env','AWS_ACCESS_KEY_ID') }}"
+    aws_secret_access_key: "{{ lookup('env','AWS_SECRET_ACCESS_KEY') }}"
+    aws_region: "{{ lookup('env','AWS_REGION') }}"
   any_errors_fatal: true
   gather_facts: no
   tasks:
+    - name: Check for the license file
+      stat:
+        path: "{{ sdwan_serial_file }}"
+      register: stat_result
+      delegate_to: localhost
+      run_once: yes
+
+    - name: Create licenses directory
+      file:
+        path: licenses
+        state: directory
+      when: not stat_result.stat.exists
+  
+    - name: Download serial file
+      aws_s3:
+        aws_access_key: "{{ aws_access_key_id }}"
+        aws_secret_key: "{{ aws_secret_access_key }}"
+        region: "{{ aws_region }}"
+        bucket: sdwan-devops-us-east-1
+        object: serialFile.viptela
+        dest: licenses/serialFile.viptela
+        mode: get
+      when: not stat_result.stat.exists
+
+    - name: Check for the license file
+      stat:
+        path: "{{ sdwan_serial_file }}"
+      register: stat_result
+      delegate_to: localhost
+      run_once: yes
+
+    - assert:
+        that:
+          - stat_result.stat.exists
+          - vmanage_org != ""
+        msg: "'vmanage_org' must be defined and {{ sdwan_serial_file }} must exist.  Verify the requirements in README are met."
+      delegate_to: localhost
+      run_once: yes
+
     - name: vManage Settings
       vmanage_settings:
         host: "{{ vmanage_ip }}"
