--- a/import-policy.yml
+++ b/import-policy.yml
@@ -1,40 +1,15 @@
-- name: Import vManage Policy Lists
+- name: Import vManage Policies
   hosts: localhost
   connection: local
+  gather_facts: no
   vars:
     vmanage_host: "{{ groups.vmanage_hosts | first }}"
     vmanage_mgmt_interface: "{{ hostvars[vmanage_host].mgmt_interface | default('ansible_host') }}"
     vmanage_ip: "{{ hostvars[vmanage_host][vmanage_mgmt_interface] | ipaddr('address') }}"
-  gather_facts: no
   tasks:
-    - name: Import policy lists
-      tags:
-        - policy_lists
-      vmanage_policy_list:
+    - vmanage_policy_import:
         user: "{{ ansible_user }}"
         host: "{{ vmanage_ip }}"
         password: "{{ ansible_password }}"
-        type: all
-        state: present
-        aggregate: "{{ vmanage_policy_lists }}"
-
-    - name: Import policy definitions
-      tags:
-        - policy_definitions
-      vmanage_policy_definition:
-        user: "{{ ansible_user }}"
-        host: "{{ vmanage_ip }}"
-        password: "{{ ansible_password }}"
-        type: data
-        state: present
-        aggregate: "{{ vmanage_policy_definitions }}"
-
-    - name: Import central policies
-      tags:
-        - central_policy
-      vmanage_central_policy:
-        user: "{{ ansible_user }}"
-        host: "{{ vmanage_ip }}"
-        password: "{{ ansible_password }}"
-        state: present
-        aggregate: "{{ vmanage_central_policies }}"
+        file: "{{ vmanage_policy_file }}"
+      when: vmanage_templates_file is defined
