--- a/import-templates.yml
+++ b/import-templates.yml
@@ -1,26 +1,16 @@
 - name: Import vManage Feature/Device Templates
   hosts: localhost
-  gather_facts: no
   connection: local
+  gather_facts: no
   vars:
     vmanage_host: "{{ groups.vmanage_hosts | first }}"
     vmanage_mgmt_interface: "{{ hostvars[vmanage_host].mgmt_interface | default('ansible_host') }}"
     vmanage_ip: "{{ hostvars[vmanage_host][vmanage_mgmt_interface] | ipaddr('address') }}"
   tasks:
-    - name: Import feature templates
-      vmanage_feature_template:
+    - vmanage_template_import:
         user: "{{ ansible_user }}"
         host: "{{ vmanage_ip }}"
         password: "{{ ansible_password }}"
-        state: present
-        aggregate: "{{ vmanage_feature_templates }}"
-      when: vmanage_feature_templates is defined
+        file: "{{ vmanage_templates_file }}"
+      when: vmanage_templates_file is defined
 
-    - name: Import device templates
-      vmanage_device_template:
-        user: "{{ ansible_user }}"
-        host: "{{ vmanage_ip }}"
-        password: "{{ ansible_password }}"
-        state: present
-        aggregate: "{{ vmanage_device_templates }}"
-      when: vmanage_device_templates is defined
