--- a/virl-control.yml
+++ b/virl-control.yml
@@ -1,5 +1,5 @@
 - import_playbook: build-ca.yml
 
-- import_playbook: build-virl.yml
+- import_playbook: build-cml.yml
 
-- import_playbook: config-virl.yml
+- import_playbook: config-cml.yml
