--- a/inventory/hq1/sdwan.yml
+++ b/inventory/hq1/sdwan.yml
@@ -3,6 +3,7 @@ all:
     virl_lab_file: "{{ playbook_dir }}/files/hq1.yaml"
     vmanage_templates_file: "{{ playbook_dir }}/files/vmanage_templates.yml"
     vmanage_policy_file: "{{ playbook_dir }}/files/vmanage_policy.yml"
+    sdwan_central_policy_name: hq1-centralized-policy
     iosxe_sdwan_version: 16.12.2r
     viptela_version: 19.2.1
     sdwan_vbond: 10.0.0.11
